# pointer-identity

./: Cargo.toml  README.md
benches/: benches.rs
src/: identity.rs  lib.rs  pointer.rs
src/pointer/: builtin.rs  bytes.rs  triomphe.rs
tests/: identity.rs
