[package]
name = "pointer-identity"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Wrapper type to treat the pointer address of types as identity rather than the value"
authors = ["Patrick Elsen"]
readme = "README.md"
repository = "https://github.com/xfbs/pointer-identity"
keywords = ["pointer", "identity", "equality", "address", "values"]
categories = ["rust-patterns"]

[dependencies]
bytes = { version = "1.5.0", optional = true }
serde = { version = "1.0.192", features = ["derive"], optional = true }

[dev-dependencies]
proptest = "1.4.0"
test-strategy = "0.3.1"

[features]
default = []
serde = ["dep:serde"]
bytes = ["dep:bytes"]
