[package]
name = "pointer-identity"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Wrapper type to treat the pointer address of types as identity rather than the value"
authors = ["Patrick Elsen"]
readme = "README.md"
repository = "https://github.com/xfbs/pointer-identity"
keywords = ["pointer", "identity", "equality", "address", "values"]
categories = ["rust-patterns"]

[dependencies]
bytes = { version = "1.5.0", optional = true }
serde = { version = "1.0.192", features = ["derive"], optional = true }
triomphe = { version = "0.1.14", optional = true }

[dev-dependencies]
proptest = "1.4.0"
test-strategy = "0.3.1"
criterion = { version = "0.4", features = ["html_reports"] }
rand = "0.8.5"

[features]
default = []
serde = ["dep:serde"]
bytes = ["dep:bytes"]
triomphe = ["dep:triomphe"]

[[bench]]
name = "benches"
harness = false
